# theboringlibrary

./: 404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: release-drafter.yml
.github/workflows/: check-release-version.yml  prepare.yml  publish.yml  python-package.yml  tag-release.yml  test-and-prepare.yml  test.yml
docs/: CNAME  index.md
reference/theboringlibrary/__init__/: index.html
reference/theboringlibrary/core/: index.html
search/: search_index.json
src/theboringlibrary/: __init__.py  __main__.py  core.py
tests/: test_core.py
